--- a/Phosphoria/color.ini
+++ b/Phosphoria/color.ini
@@ -1,20 +1,20 @@
 [Base]
 ; Phosphoria Theme
-main_fg                               = fafffe
-secondary_fg                          = 1adba8
-main_bg                               = 0f1211
+main_fg                               = FEFFFE
+secondary_fg                          = FC1857
+main_bg                               = 0F1211
 sidebar_and_player_bg                 = 0d1112
-cover_overlay_and_shadow              = 243035 
-indicator_fg_and_button_bg            = 00ffbb
-pressing_fg                           = 0000FF
-slider_bg                             = 2d4039
-sidebar_indicator_and_hover_button_bg = 02b585
-scrollbar_fg_and_selected_row_bg      = 3C494E
-pressing_button_fg                    = 02b585
-pressing_button_bg                    = 2d4039
-selected_button                       = 009688
-miscellaneous_bg                      = 02b585
-miscellaneous_hover_bg                = 404040
-preserve_1                            = 00ffc8
+cover_overlay_and_shadow              = FFFFFF 
+indicator_fg_and_button_bg            = F4E7EA
+pressing_fg                           = FFCEDA
+slider_bg                             = 4A0618
+sidebar_indicator_and_hover_button_bg = F4E7EA
+scrollbar_fg_and_selected_row_bg      = 4A0618
+pressing_button_fg                    = DEDEDE
+pressing_button_bg                    = F4E7EA
+selected_button                       = F4E7EA
+miscellaneous_bg                      = ecd3da
+miscellaneous_hover_bg                = ECD3DA
+preserve_1                            = 3A2E48
 
-; 0ef9a8
+; F4E7EA
